--- a/ToDo/ToDoListViewController.xib
+++ b/ToDo/ToDoListViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ToDoListViewController" customModule="ToDo" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="zbE-P2-GB8" id="ZKJ-zi-iTN"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,7 +15,19 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="0.91061566672117555" green="0.90768055655668234" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zbE-P2-GB8">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </tableView>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="zbE-P2-GB8" secondAttribute="bottom" id="0Nf-rT-yrn"/>
+                <constraint firstItem="zbE-P2-GB8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="DJs-kq-LO7"/>
+                <constraint firstItem="zbE-P2-GB8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="P9V-wO-Yb7"/>
+                <constraint firstAttribute="trailing" secondItem="zbE-P2-GB8" secondAttribute="trailing" id="oOq-lT-HRh"/>
+            </constraints>
         </view>
     </objects>
 </document>
